<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.github.arakat.arakat-community</groupId>
	<artifactId>arakat</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>arakat</name>
	<description>Demo project for Spring Boot</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.4.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<springfox.version>2.7.0</springfox.version>
		<!--<junit.version>5.3.1</junit.version>-->
		<!--<mockito.core.version>2.23.0</mockito.core.version>-->
		<!--<mockito.junit.version>2.21.0</mockito.junit.version>-->
		<starter.data.mongo.version>2.0.5.RELEASE</starter.data.mongo.version>
		<json.version>20180813</json.version>
		<spark.version>2.3.2</spark.version>
		<apache.commons.version>2.6</apache.commons.version>
		<junit-jupiter.version>5.3.0-M1</junit-jupiter.version>
		<mockito-junit-jupiter.version>2.19.0</mockito-junit-jupiter.version>
		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- SWAGGER RELATED DEPENDENCIES -->
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>${springfox.version}</version>
		</dependency>

		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>${springfox.version}</version>
		</dependency>

		<!-- MONGO RELATED DEPENDENCIES -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
			<version>${starter.data.mongo.version}</version>
		</dependency>

		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>3.8.2</version>
		</dependency>

		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>bson</artifactId>
			<version>3.8.2</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>

		<!-- JSON OPERATIONS RELATED DEPENDENCIES -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${json.version}</version>
        </dependency>

		<!-- SPARK RELATED DEPENDENCIES -->
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-core_2.11</artifactId>
			<version>${spark.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-sql_2.11</artifactId>
			<version>${spark.version}</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${apache.commons.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- TEST RELATED DEPENDENCIES -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito-junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>

		<!--<dependency>-->
			<!--<groupId>org.springframework.boot</groupId>-->
			<!--<artifactId>spring-boot-starter-test</artifactId>-->
			<!--<scope>test</scope>-->
			<!--<exclusions>-->
				<!--<exclusion>-->
					<!--<groupId>junit</groupId>-->
					<!--<artifactId>junit</artifactId>-->
				<!--</exclusion>-->
			<!--</exclusions>-->
		<!--</dependency>-->

		<!--<dependency>-->
			<!--<groupId>org.junit.jupiter</groupId>-->
			<!--<artifactId>junit-jupiter-api</artifactId>-->
			<!--<version>${junit.version}</version>-->
		<!--</dependency>-->
		<!--<dependency>-->
			<!--<groupId>org.junit.jupiter</groupId>-->
			<!--<artifactId>junit-jupiter-engine</artifactId>-->
			<!--<version>${junit.version}</version>-->
		<!--</dependency>-->

		<!--<dependency>-->
			<!--<groupId>org.mockito</groupId>-->
			<!--<artifactId>mockito-junit-jupiter</artifactId>-->
			<!--<version>${mockito.junit.version}</version>-->
			<!--<scope>test</scope>-->
		<!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>org.mockito</groupId>-->
            <!--<artifactId>mockito-core</artifactId>-->
            <!--<version>${mockito.core.version}</version>-->
            <!--<scope>test</scope>-->
        <!--</dependency>-->

		<!--<dependency>-->
			<!--<groupId>org.mockito</groupId>-->
			<!--<artifactId>mockito-all</artifactId>-->
			<!--<version>${mockito.version}</version>-->
			<!--<scope>test</scope>-->
		<!--</dependency>-->
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<useSystemClassLoader>false</useSystemClassLoader>
				</configuration>
			</plugin>
			<!--<plugin>-->
				<!--<groupId>org.apache.maven.plugins</groupId>-->
				<!--<artifactId>maven-surefire-plugin</artifactId>-->
				<!--<configuration>-->
					<!--<forkCount>3</forkCount>-->
					<!--<reuseForks>true</reuseForks>-->
					<!--<argLine>-Xmx12G -XX:MaxPermSize=512m</argLine>-->
				<!--</configuration>-->
			<!--</plugin>-->
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>


</project>